--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
         <h3>Would you like to play?</h3>
         <h3>Please input players' names</h3>
       </div>
+      <div class="form-group">
+        <form >
+          <label for="new-first-name">Player 1 Name:</label>
+          <input type="text" class="form-control" id="player-1">
+          <button id="nameButton" type="submit" class="btn btn-primary">Submit</button>
+        </form>
 
+      </div>
       <div class="random">
         <button id="random" type="button" class="btn btn-info">Random</button>
       </div>
