--- a/index.html
+++ b/index.html
@@ -16,19 +16,30 @@
         <h3>Please input players' names</h3>
       </div>
       <div class="form-group">
-        <form >
+        <form id="entry">
           <label for="new-first-name">Player 1 Name:</label>
           <input type="text" class="form-control" id="player-1">
+          <!-- <br>
+          <label for="new-first-name">Player 2 Name:</label>
+          <input type="text" class="form-control" id="player-2"> -->
           <button id="nameButton" type="submit" class="btn btn-primary">Submit</button>
         </form>
 
       </div>
       <div class="random">
-        <button id="random" type="button" class="btn btn-info">Random</button>
+        <button id="random" type="button" class="btn btn-info">Roll</button>
       </div>
       <br>
-      <div class="randomNumber">
+      <div class="hold">
+        <button id="hold" type="button" class="btn btn-warning">Hold</button>
+      </div>
+      <br>
 
+      <div class="nameinput">
+        <span id="playername"></span>
+      </div>
+      <div>
+        <span id="roundScore"></span>
       </div>
       <br>
       <div class="totalNumber">
