add new game button and style for user's output

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="jumbotron">
         <h2>Pig Dice</h2>
         <h3>Would you like to play?</h3>
-        <h3>Please input players' names</h3>
+        <h3>Please input your name & press the submit button to start the game.</h3>
       </div>
 
       <div class="form-group">
@@ -34,10 +34,14 @@
       </div>
       
       <div class="nameinput">
-        <span id="playername"></span>
+        <h4 id="playername"></h4>
       </div>
       <div>
-        <span id="roundScore"></span>
+        <h4 id="roundScore"></h4>
+      </div>
+      <br>
+      <div class="new-game">
+        <button id="new-game" type="button" class="btn btn-success">New Game</button>
       </div>
     </div>
   </body>
