--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="form-group">
         <form id="entry">
           <label for="new-first-name">Player 1 Name:</label>
-          <input type="text" class="form-control" id="player-1">
+          <input type="text" id="player-1" size="45">
           <br>
           <button id="nameButton" type="submit" class="btn btn-primary">Submit</button>
         </form>
