--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="jumbotron">
         <h2>Pig Dice</h2>
         <h3>Would you like to play?</h3>
-        <h3>Please input your name & press the submit button to start the game.</h3>
+        <h3>Please input your name & press the blue submit button to start the game.</h3>
       </div>
 
       <div class="form-group">
